2001-11-04  Martin Mares  <mj@ucw.cz>

	* pci.ids: Synced with the PCI ID Repository at SourceForge
	(http://pciids.sourceforge.net/).

2000-08-25  Martin Mares  <mj@albireo.ucw.cz>

	* pci.ids: Updated ID's, synced with kernel 2.4.0-test7.

2000-06-13  Martin Mares  <mj@albireo.ucw.cz>

	* Makefile (uninstall): Fixed.

	* pci.ids: ID updates.

2000-05-20  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 2.1.8.

	* pci.ids: ID updates.

	* lspci.c (show_verbose): Min/max latency is now printed in nanoseconds.

2000-05-04  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_verbose): If the header type doesn't match device
	class, just print a warning and still use the header type, assuming
	bogus class info.

2000-05-01  Martin Mares  <mj@albireo.ucw.cz>

	* lspci.c (show_pm): Updated according to PCI PM specs 1.1.

	* pci.ids: Updated Contemporary Control ARCnet card entries.

	* pci.ids: Synchronized class list with latest PCI SIG documents.

2000-04-29  Martin Mares  <mj@albireo.ucw.cz>

	* lib/names.c (pci_lookup_name): Fixed the cheat.

	* lib/internal.h: Moved UNUSED/inline hacks above all other declarations.

	* pci.ids: Various ID updates.

2000-04-21  Martin Mares  <mj@albireo.ucw.cz>

	* Released as 2.1.7.

	* pciutils.spec: Added German description.

	* lib/names.c (pci_lookup_name): Added a cheat for case that subsystem ID's
	are the same as device ID and just output subsystem name according to
	device name.

	* lib/proc.c: Use UNUSED instead of __attribute__((unused)).

	* lib/pci.h: Added the correct typedefs for AIX.

	* lib/generic.c (pci_generic_scan_bus): Export.

	* lib/configure: Detect AIX. Use "echo '...\c'" instead of
	"echo -n" if the shell isn't bash.

	* lspci.c: Avoid using alloca() if not compiled by GCC.
	(insert_dev): Avoid returning a void value.

	* Makefile: Choose which install utility to use according to
	OS type. Also use `-o' instead of `-or' in find arguments.
	Part of the AIX port.
